--- a/src/Terratype/App_Plugins/Terratype/Views/editor.html
+++ b/src/Terratype/App_Plugins/Terratype/Views/editor.html
@@ -1,11 +1,11 @@
 ﻿<!-- Terratype -->
-<div class="ng-cloak terratype" ng-controller="terratype" ng-init="vm().initEditor()" ng-show="!vm().loading">
+<div class="ng-cloak terratype" ng-controller="terratype" ng-init="terratype.initEditor()" ng-show="!vm().loading">
     <div>
         <div ng-show="vm().isPreview">
             <div ng-style="{'background-image':'url(' + vm().provider.events.files.mapExample + ')','padding-top': '10px 0 10px 25px', 'margin':'-40px 0 0 -10px', 'height':'100px'}">
                 <div style="text-align:center">
                     <div ng-show="config().debug != 1">
-                        <img ng-src="{{vm().absoluteUrl(config().icon.url)}}" ng-style="{'width': config().icon.size.width + 'px', 'height': config().icon.size.height + 'px', 'margin-top':'25px'}" />
+                        <img ng-src="{{terratype.absoluteUrl(config().icon.url)}}" ng-style="{'width': config().icon.size.width + 'px', 'height': config().icon.size.height + 'px', 'margin-top':'25px'}" />
                     </div>
                     <div ng-show="config().debug == 1">
                         <h2 style="padding-top:25px;">
@@ -21,9 +21,9 @@
                 </ng-include>
             </div>
             <div ng-if="config().label.enable == true && config().label.editPosition == 0" style="margin-top:5px;">
-                <umb-overlay ng-if="vm().labelOverlay.show"
-                             model="vm().labelOverlay"
-                             view="vm().labelOverlay.view"
+                <umb-overlay ng-if="terratype.labelOverlay.show"
+                             model="terratype.labelOverlay"
+                             view="terratype.labelOverlay.view"
                              position="right">
                 </umb-overlay>
             </div>
