--- a/src/Terratype.TestSite/App_Plugins/Terratype/Views/grid.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/Views/grid.html
@@ -1,13 +1,13 @@
 ﻿<!-- Terratype -->
 <div class="ng-cloak terratype" ng-controller="terratype" ng-init="terratype.initGrid()" ng-show="!vm().loading">
-    <div class="umb-editor-placeholder" ng-click="terratype.gridOverlay.display()" ng-show="!control.value || active().gridOverlay.show">
+    <div class="umb-editor-placeholder" ng-click="terratype.gridOverlay.display()" ng-show="!control.value || parentScope().terratype.gridOverlay.show">
         <i class="icon icon-map-location"></i>
         <div ng-show="!control.value">
             <localize key="terratypeGrid_insert">Click to insert map</localize>
         </div>
     </div>
 
-    <div ng-if="control.value && !active().gridOverlay.show">
+    <div ng-if="control.value && !parentScope().terratype.gridOverlay.show">
         <div ng-if="config().debug != 1">
             <ng-include src="vm().provider.events.files.views.grid.apperance">
             </ng-include>
@@ -16,12 +16,12 @@
             <div ng-show="vm().error" style="color:red;">
                 <localize key="terratypeEditor_error">Error loading Terratype control, the json below is corrupt</localize>
             </div>
-            <textarea style="height:300px;width:100%;margin:20px 10px 0 0;background-color:khaki;color:black;" spellcheck=false ng-model="control.value" terratype-json></textarea>
+            <!--<textarea style="height:300px;width:100%;margin:20px 10px 0 0;background-color:khaki;color:black;" spellcheck=false ng-model="control.value" terratype-json></textarea>-->
         </div>
     </div>
 
-    <umb-overlay ng-if="active().gridOverlay.show"
-                 model="active().gridOverlay"
+    <umb-overlay ng-if="parentScope().terratype.gridOverlay.show"
+                 model="parentScope().terratype.gridOverlay"
                  view="terratype.gridOverlay.view"
                  position="right">
     </umb-overlay>
