--- a/src/Terratype/App_Plugins/Terratype/Views/label.standard.html
+++ b/src/Terratype/App_Plugins/Terratype/Views/label.standard.html
@@ -10,6 +10,9 @@
                 .mce-toolbar {
                     top:auto !important;
                 }
+                .umb-grid .umb-overlay .mce-toolbar {
+                    display:block !important;
+                }
             </style>
             <div grid-rte
                 configuration="rte.config"
