--- a/src/Terratype/App_Plugins/Terratype/Views/label.standard.html
+++ b/src/Terratype/App_Plugins/Terratype/Views/label.standard.html
@@ -3,14 +3,12 @@
     <div id="terratype_{{identifier}}_label_standard_content" class="umb-editor" style="min-height:100px;">
         <div>
             <style>
-                .umb-grid .umb-overlay .mce-tinymce {
+                .terratype .umb-overlay .mce-tinymce {
                     background: #f8f8f8!important;
                     border: solid 1px #d9d9d9 !important;
                 }
-                .mce-toolbar {
+                .terratype .umb-overlay .mce-toolbar {
                     top:auto !important;
-                }
-                .umb-grid .umb-overlay .mce-toolbar {
                     display:block !important;
                 }
             </style>
