--- a/src/Terratype.LeafletV1/App_Plugins/Terratype.LeafletV1/Views/grid.apperance.html
+++ b/src/Terratype.LeafletV1/App_Plugins/Terratype.LeafletV1/Views/grid.apperance.html
@@ -1,6 +1,6 @@
 ﻿<div style="overflow:hidden;">
-    <style ng-bind-html="'#terratype_' + identifier + '_googlemapv3_map {height:' + config().height + 'px;}'">
+    <style ng-bind-html="'#terratype_' + identifier + '_leafletv1_map {height:' + config().height + 'px;}'">
     </style>
-    <div id="terratype_{{identifier}}_googlemapv3_map" ng-show="vm().showMap">
+    <div id="terratype_{{identifier}}_leafletv1_map" ng-show="vm().showMap">
     </div>
 </div>
