--- a/src/Terratype.GoogleMapsV3/App_Plugins/Terratype.GoogleMapsV3/Views/config.definition.html
+++ b/src/Terratype.GoogleMapsV3/App_Plugins/Terratype.GoogleMapsV3/Views/config.definition.html
@@ -53,7 +53,7 @@
             </small>
         </label>
         <div class="controls">
-            <input id="terratype_{{identifier}}_googlemapv3_apikey" type="text" ng-model="config().provider.apiKey" class="umb-editor umb-textstring textstring" placeholder="Google API key" spellcheck=false ng-change="vm().status.reload = true" />
+            <input id="terratype_{{identifier}}_googlemapv3_apikey" type="text" ng-model="config().provider.apiKey" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@terratypeGoogleMapsV3ConfigDefinition__apiKeyPlaceholder" spellcheck=false ng-change="vm().status.reload = true" />
             <div>
                 <div>
                     <a href="https://developers.google.com/maps/documentation/javascript/get-api-key#get-an-api-key" target="_blank" style="font-size:smaller;">
