--- a/src/Terratype.TestSite/App_Plugins/Terratype.LeafletV1/Views/editor.apperance.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype.LeafletV1/Views/editor.apperance.html
@@ -1,37 +1,9 @@
-﻿<div id="terratype_{{identifier}}_googlemapv3">
+﻿<div id="terratype_{{identifier}}_leafletv1">
     <div ng-if="vm().status.loading">
         <img ng-src="{{terratype.images.loading}}" />
     </div>
-    <div ng-if="vm().status.failed">
-        <img ng-src="{{terratype.images.failed}}" />
-        <span style="color:red;padding-right:10px;"><localize key="terratypeGoogleMapsV3EditorApperance_statusInvalid">Invalid Google Map API Key</localize></span>
-    </div>
-    <div ng-if="vm().status.error">
-        <img ng-src="{{terratype.images.failed}}" />
-        <span style="color:red;padding-right:10px;"><localize key="terratypeGoogleMapsV3EditorApperance_statusError">Failed to load Google Maps V3 multiple times, please manually refresh the page and try again</localize></span>
-    </div>
-    <div ng-if="vm().status.duplicate">
-        <img ng-src="{{terratype.images.failed}}" />
-        <span style="color:red;padding-right:10px;"><localize key="terratypeGoogleMapsV3EditorApperance_statusDuplicate">Detected multiple GoogleMapsV3 maps with different configuration; All Google Maps must share the same Api Key, Coordinate System, ForceHttps switch and Language settings</localize></span>
-    </div>
-    <div ng-if="vm().status.searchFailed">
-        <img ng-src="{{terratype.images.failed}}" />
-        <span style="color:red;padding-right:10px;"><localize key="terratypeGoogleMapsV3EditorApperance_statusSearchFailed">Need to enable Google Places API Web Service</localize></span>
-    </div>
-
-    <div ng-if="vm().status.success" class="umb-editor">
+    <div ng-if="!vm().status.loading">
         <div>
-            <div ng-show="store().search.enable != 0 && config().search.enable != 0">
-                <input id="terratype_{{identifier}}_googlemapv3_lookup" class="umb-editor umb-textstring textstring" type="text" localize="placeholder" placeholder="@terratypeGoogleMapsV3EditorApperance_searchPlaceholder" ng-model="store().lookup" spellcheck=false style="z-index:9998 !important;">
-                <style ng-bind-html="'.terratype_' + identifier + '_googlemapv3_lookup_results {position:static!important;}'">
-                </style>
-                <div id="terratype_{{identifier}}_googlemapv3_lookup_results" style="position:absolute;z-index:9999 !important"></div>
-            </div>
-        </div>
-        <div style="height:1px;width:206px;display:inline-block;">
-             &nbsp;
-        </div>
-        <div style="margin-top:-15px;">
             <ng-include src="vm().provider.events.files.views.grid.apperance">
             </ng-include>
         </div>
