--- a/src/Terratype/App_Plugins/Terratype/Views/config.html
+++ b/src/Terratype/App_Plugins/Terratype/Views/config.html
@@ -51,13 +51,15 @@
             <ng-include src="vm().provider.events.files.views.config.definition">
             </ng-include>
         </section>
-        <section>
+
+        <section ng-if="vm().provider.canSearch == true">
             <h4 style="background-color:#dfdfdf;padding: 5px 0 5px 5px;margin-left:-5px;">
                 <localize key="terratypeConfig_searchHeading">Search</localize>
             </h4>
             <ng-include src="vm().provider.events.files.views.config.search">
             </ng-include>
         </section>
+
         <section>
             <h4 style="background-color:#dfdfdf;padding: 5px 0 5px 5px;margin-left:-5px;">
                 <localize key="terratypeConfig_apperanceHeading">Apperance</localize>
